# light-mlt

./: .gitattributes  .gitignore  README.md  pyproject.toml  rebuild.sh  requirements.txt  script.sh  setup.py  teste.ipynb
model_autoencoder/: cats_map.pkl  mlt_params.pkl  preprocessed.csv  scaler.pkl  schema.pkl
src/light_mlt/: __init__.py  light_mlt.py
src/light_mlt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_fit_transform_basic.py  test_inverse_transform.py  test_mlt_core.py  test_schema_and_io.py
