[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "light-mlt"
version = "0.1.0"
description = "Lightweight preprocessing and reversible Modular Linear Tokenization (MLT) utilities for categorical and continuous data."
readme = "README.md"
authors = [
  { name = "Tcharlies Schmitz", email = "tcharliesschmitz@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "pandas>=2.0",
  "scikit-learn>=1.2"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
"Homepage" = "https://pypi.org/project/light-mlt/"
"Repository" = "https://github.com/tcharliesschmitz/light-mlt"
"Issues" = "https://github.com/tcharliesschmitz/light-mlt/issues"
"Documentation" = "https://packaging.python.org/en/latest/flow/"
